update to standards (5)

--- a/projects/git-etc.html
+++ b/projects/git-etc.html
@@ -141,19 +141,19 @@ systemctl restart git-etc
 <table>
   <tr>
     <th>DIRECTORY</th>
-    <td><p>Full path to working directory with observed files. Default is <code>/etc</code>.</p></td>
+    <td>Full path to working directory with observed files. Default is <code>/etc</code>.</td>
   </tr>
   <tr>
     <th>TIMESLEEP</th>
-    <td><p>Time interval between updates, hours. It must be integer and >= 1. Default is <code>12</code>.</p></td>
+    <td>Time interval between updates, hours. It must be integer and >= 1. Default is <code>12</code>.</td>
   </tr>
   <tr>
     <th>IGNORELIST</th>
-    <td><p>List of files that will not be observed. Separator is ";;". May be empty.</p></td>
+    <td>List of files that will not be observed. Separator is ";;". May be empty.</td>
   </tr>
   <tr>
     <th>FORALL</th>
-    <td><p><code>1</code> will enable access for normal user. Default is <code>1</code>.</p></td>
+    <td><code>1</code> will enable access for normal user. Default is <code>1</code>.</td>
   </tr>
 </table>
 <!-- end of config block -->
