--- a/projects/queued.html
+++ b/projects/queued.html
@@ -140,27 +140,27 @@ systemctl restart queued
 <table>
   <tr>
     <th>WORKDIR</th>
-    <td><p>Full path to directory with source jobs. Default is <code>/var/lib/queued/work</code>. This directory must contain source scripts <code>script-name</code>, a priority file (it is not necessary) <code>script-name.pr</code> and a file with username (it is not necessary too) <code>script-name.user</code>.</p></td>
+    <td>Full path to directory with source jobs. Default is <code>/var/lib/queued/work</code>. This directory must contain source scripts <code>script-name</code>, a priority file (it is not necessary) <code>script-name.pr</code> and a file with username (it is not necessary too) <code>script-name.user</code>.</td>
   </tr>
   <tr>
     <th>JOBDIR</th>
-    <td><p>Full path to directory with running jobs. Default is <code>/var/lib/queued/job</code>. All job files will be moved here.</p></td>
+    <td>Full path to directory with running jobs. Default is <code>/var/lib/queued/job</code>. All job files will be moved here.</td>
   </tr>
   <tr>
     <th>QUEUEFILE</th>
-    <td><p>Full path to file with queue list. Default is <code>/var/lib/queued/queue</code>.</td>
+    <td>Full path to file with queue list. Default is <code>/var/lib/queued/queue</code>.</td>
   </tr>
   <tr>
     <th>PRIORITY</th>
-    <td><p>Default priority. Default is <code>0</code>. The higher the value, the higher the priority of the task.</td>
+    <td>Default priority. Default is <code>0</code>. The higher the value, the higher the priority of the task.</td>
   </tr>
   <tr>
     <th>SLEEPTIME</th>
-    <td><p>Time interval in minutes. Default is <code>5</code>.</td>
+    <td>Time interval in minutes. Default is <code>5</code>.</td>
   </tr>
   <tr>
     <th>STARTASUSER</th>
-    <td><p>Default user. Default is <code>root</code>. This user will own created files.</td>
+    <td>Default user. Default is <code>root</code>. This user will own created files.</td>
   </tr>
 </table>
 <!-- end of config block -->
