--- a/ru/projects/git-etc.html
+++ b/ru/projects/git-etc.html
@@ -142,19 +142,19 @@ systemctl restart git-etc
 <table>
   <tr>
     <th>DIRECTORY</th>
-    <td><p>Полный путь к рабочей директории с наблюдаемыми файлами. По умолчанию <code>/etc</code>.</p></td>
+    <td>Полный путь к рабочей директории с наблюдаемыми файлами. По умолчанию <code>/etc</code>.</td>
   </tr>
   <tr>
     <th>TIMESLEEP</th>
-    <td><p>Промежуток времени между обновлениями, часы. Должно быть целым и >= 1. По умолчанию <code>12</code>.</p></td>
+    <td>Промежуток времени между обновлениями, часы. Должно быть целым и >= 1. По умолчанию <code>12</code>.</td>
   </tr>
   <tr>
     <th>IGNORELIST</th>
-    <td><p>Список файлов, которые не будут наблюдаться. Разделитель ";;". Может быть пустым.</td>
+    <td>Список файлов, которые не будут наблюдаться. Разделитель ";;". Может быть пустым.</td>
   </tr>
   <tr>
     <th>FORALL</th>
-    <td><p><code>1</code> включит доступ для обычного пользователя. По умолчанию <code>1</code>.</td>
+    <td><code>1</code> включит доступ для обычного пользователя. По умолчанию <code>1</code>.</td>
   </tr>
 </table>
 <!-- end of config block -->
